// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar shows the correct content when the user is a non-administrator 1`] = `
<nav
  className="sc-bdVaJa navbar is-light is-full-width bDWFJH"
  role="button"
>
  <div
    className="navbar-brand"
  >
    <a
      aria-expanded="false"
      aria-label="menu"
      className="navbar-burger burger "
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu title  "
  >
    <div
      className="navbar-start "
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-1"
        to="/"
      >
        <Route
          path="\\\\/"
        >
          <Link
            aria-current="page"
            className="navbar-item is-1 active"
            replace={false}
            style={Object {}}
            to="/"
          >
            <a
              aria-current="page"
              className="navbar-item is-1 active"
              href="/"
              onClick={[Function]}
              style={Object {}}
            >
              Search
            </a>
          </Link>
        </Route>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-3"
        to="/data-requests"
      >
        <Route
          path="\\\\/data-requests"
        >
          <Link
            aria-current={null}
            className="navbar-item is-3"
            replace={false}
            to="/data-requests"
          >
            <a
              aria-current={null}
              className="navbar-item is-3"
              href="/data-requests"
              onClick={[Function]}
            >
              Data Requests
            </a>
          </Link>
        </Route>
      </NavLink>
    </div>
    <div
      className="navbar-end subtitle is-4"
    >
      <div
        className="navbar-item has-dropdown is-hoverable"
      >
        <a
          className="navbar-link"
        >
          Hello 
          name
        </a>
        <div
          className="navbar-dropdown"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="navbar-item"
            to="/account"
          >
            <Route
              path="\\\\/account"
            >
              <Link
                aria-current={null}
                className="navbar-item"
                replace={false}
                to="/account"
              >
                <a
                  aria-current={null}
                  className="navbar-item"
                  href="/account"
                  onClick={[Function]}
                >
                  Account
                </a>
              </Link>
            </Route>
          </NavLink>
          <a
            className="navbar-item"
            data-test="logout"
            onClick={[MockFunction]}
          >
            Logout
          </a>
        </div>
      </div>
      <div
        className="navbar-item is-hidden-descktop"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className=" button is-link"
          to="/cart"
        >
          <Route
            path="\\\\/cart"
          >
            <Link
              aria-current={null}
              className=" button is-link"
              replace={false}
              to="/cart"
            >
              <a
                aria-current={null}
                className=" button is-link"
                href="/cart"
                onClick={[Function]}
              >
                <span>
                  <i
                    className="fas fa-shopping-cart"
                  />
                   CART
                </span>
              </a>
            </Link>
          </Route>
        </NavLink>
      </div>
    </div>
  </div>
</nav>
`;

exports[`NavigationBar shows the correct content when the user is an administrator 1`] = `
<nav
  className="sc-bdVaJa navbar is-light is-full-width bDWFJH"
  role="button"
>
  <div
    className="navbar-brand"
  >
    <a
      aria-expanded="false"
      aria-label="menu"
      className="navbar-burger burger "
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu title  "
  >
    <div
      className="navbar-start "
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-1"
        to="/"
      >
        <Route
          path="\\\\/"
        >
          <Link
            aria-current="page"
            className="navbar-item is-1 active"
            replace={false}
            style={Object {}}
            to="/"
          >
            <a
              aria-current="page"
              className="navbar-item is-1 active"
              href="/"
              onClick={[Function]}
              style={Object {}}
            >
              Search
            </a>
          </Link>
        </Route>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-3"
        to="/data-requests"
      >
        <Route
          path="\\\\/data-requests"
        >
          <Link
            aria-current={null}
            className="navbar-item is-3"
            replace={false}
            to="/data-requests"
          >
            <a
              aria-current={null}
              className="navbar-item is-3"
              href="/data-requests"
              onClick={[Function]}
            >
              Data Requests
            </a>
          </Link>
        </Route>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-3"
        to="/admin"
      >
        <Route
          path="\\\\/admin"
        >
          <Link
            aria-current={null}
            className="navbar-item is-3"
            replace={false}
            to="/admin"
          >
            <a
              aria-current={null}
              className="navbar-item is-3"
              href="/admin"
              onClick={[Function]}
            >
              Admin
            </a>
          </Link>
        </Route>
      </NavLink>
    </div>
    <div
      className="navbar-end subtitle is-4"
    >
      <div
        className="navbar-item has-dropdown is-hoverable"
      >
        <a
          className="navbar-link"
        >
          Hello 
          name
        </a>
        <div
          className="navbar-dropdown"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="navbar-item"
            to="/account"
          >
            <Route
              path="\\\\/account"
            >
              <Link
                aria-current={null}
                className="navbar-item"
                replace={false}
                to="/account"
              >
                <a
                  aria-current={null}
                  className="navbar-item"
                  href="/account"
                  onClick={[Function]}
                >
                  Account
                </a>
              </Link>
            </Route>
          </NavLink>
          <a
            className="navbar-item"
            data-test="logout"
            onClick={[MockFunction]}
          >
            Logout
          </a>
        </div>
      </div>
      <div
        className="navbar-item is-hidden-descktop"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className=" button is-link"
          to="/cart"
        >
          <Route
            path="\\\\/cart"
          >
            <Link
              aria-current={null}
              className=" button is-link"
              replace={false}
              to="/cart"
            >
              <a
                aria-current={null}
                className=" button is-link"
                href="/cart"
                onClick={[Function]}
              >
                <span>
                  <i
                    className="fas fa-shopping-cart"
                  />
                   CART
                </span>
              </a>
            </Link>
          </Route>
        </NavLink>
      </div>
    </div>
  </div>
</nav>
`;

exports[`NavigationBar shows the correct content when the user is not logged in 1`] = `
<nav
  className="sc-bdVaJa navbar is-light is-full-width bDWFJH"
  role="button"
>
  <div
    className="navbar-brand"
  >
    <a
      aria-expanded="false"
      aria-label="menu"
      className="navbar-burger burger "
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu title  "
  >
    <div
      className="navbar-start "
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="navbar-item is-1"
        to="/"
      >
        <Route
          path="\\\\/"
        >
          <Link
            aria-current="page"
            className="navbar-item is-1 active"
            replace={false}
            style={Object {}}
            to="/"
          >
            <a
              aria-current="page"
              className="navbar-item is-1 active"
              href="/"
              onClick={[Function]}
              style={Object {}}
            >
              Search
            </a>
          </Link>
        </Route>
      </NavLink>
    </div>
    <div
      className="navbar-end subtitle is-4"
    >
      <div
        className="navbar-item"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className=" button is-primary  is-outlined"
          to="/login"
        >
          <Route
            path="\\\\/login"
          >
            <Link
              aria-current={null}
              className=" button is-primary  is-outlined"
              replace={false}
              to="/login"
            >
              <a
                aria-current={null}
                className=" button is-primary  is-outlined"
                href="/login"
                onClick={[Function]}
              >
                <span>
                  Login 
                  <i
                    className="fas fa-sign-in-alt"
                  />
                   
                </span>
              </a>
            </Link>
          </Route>
        </NavLink>
      </div>
      <div
        className="navbar-item"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className=" button is-info is-outlined"
          to="/register"
        >
          <Route
            path="\\\\/register"
          >
            <Link
              aria-current={null}
              className=" button is-info is-outlined"
              replace={false}
              to="/register"
            >
              <a
                aria-current={null}
                className=" button is-info is-outlined"
                href="/register"
                onClick={[Function]}
              >
                <span>
                  Register 
                  <i
                    className="fas fa-user-plus"
                  />
                </span>
              </a>
            </Link>
          </Route>
        </NavLink>
      </div>
      <div
        className="navbar-item is-hidden-descktop"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          className=" button is-link"
          to="/cart"
        >
          <Route
            path="\\\\/cart"
          >
            <Link
              aria-current={null}
              className=" button is-link"
              replace={false}
              to="/cart"
            >
              <a
                aria-current={null}
                className=" button is-link"
                href="/cart"
                onClick={[Function]}
              >
                <span>
                  <i
                    className="fas fa-shopping-cart"
                  />
                   CART
                </span>
              </a>
            </Link>
          </Route>
        </NavLink>
      </div>
    </div>
  </div>
</nav>
`;
